Bug 5599: Generating an EAN-8 Barcode throws an error "Trying to access array offset on value of type bool". Fixed. https://github.com/FrontAccountingERP/FA/commit/b2460e88c7d050659179d7a6e24a10b0616d3cac

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2022-06-28 Joe Hunt
+Bug 5599: Generating an EAN-8 Barcode throws an error "Trying to access array offset on value of type bool". Fixed.
+M	inventory/manage/items.php
+
 2022-06-23 Joe Hunt
 Feature 5623: link to new supplier invoice after supplier payment, option to have last supplier invoice be current supplier.
 M	purchasing/supplier_payment.php
