--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2022-07-10 Joe Hunt
+Removed delivery in a batch cannot be voided after the invoice is made. Fixed.
+M	admin/db/voiding_db.inc
+
+2022-07-10 Joe Hunt
 php 8.1 bug. Parameter to urlencode cannot be null. Fixed.
 M	reporting/includes/reporting.inc
 
