Updated gettext template. https://github.com/FrontAccountingERP/FA/commit/1bfdeccfdb40b593afa9b8264cf7272a1814fa5b

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2022-07-12 Janusz Dobrowolski
+Updated gettext template.
+M	lang/new_language_template/LC_MESSAGES/empty.po
+
 2022-07-10 Joe Hunt
 Removed delivery in a batch cannot be voided after the invoice is made. Fixed.
 M	admin/db/voiding_db.inc
