get_stock_gl_code function called twice in the add_supp_invoice. Fixed. https://github.com/FrontAccountingERP/FA/commit/74446c6ee370f0b75424624df93cfc2010245ff1 https://frontaccounting.com/punbb/viewtopic.php?id=9910

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2022-07-15 Joe Hunt
+get_stock_gl_code function called twice in the add_supp_invoice. Fixed.
+M	purchasing/includes/db/invoice_db.inc
+
 2022-07-13 Joe Hunt
 Release 2.4.12
 M	version.php
