Invoice not converting from DN due to float bug fixed https://github.com/FrontAccountingERP/FA/commit/b57cb5b1684ef37a62a70466a789d2594a7292d5 https://github.com/FrontAccountingERP/FA/commit/ed3db2c39e10b295db0391096dd233c1aaa2b108 https://github.com/FrontAccountingERP/FA/commit/22cecf450b82a45ee299111d093b1da662806a2d https://frontaccounting.com/punbb/viewtopic.php?id=9900

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,8 @@
+2022-07-17 Joe Hunt
+Invoice not converting from DN due to float bug in PHP. items_units_db.inc is already included, reruns
+M	sales/customer_delivery.php
+M	sales/customer_invoice.php
+
 2022-07-15 Joe Hunt
 get_stock_gl_code function called twice in the add_supp_invoice. Fixed.
 M	purchasing/includes/db/invoice_db.inc
