php 8. strpos(): Passing null to parameter #1 ($haystack) of type string is deprecated. Fixed. https://github.com/FrontAccountingERP/FA/commit/d81405411c4b336cbe3b2894ae719b13fc86a721

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2022-07-22 Joe Hunt
+php 8. strpos(): Passing null to parameter #1 ($haystack) of type string is deprecated. Fixed.
+M	includes/date_functions.inc
+
+2022-07-22 Joe Hunt
 php 8. cannot generate recurring invoices after upgrade to 2.4.12. Fixed.
 M	reporting/includes/reporting.inc
 
