Show also Upcoming Purchase Invoices - in Dashboard. Fixed. https://github.com/FrontAccountingERP/FA/commit/9044444ee1933dc684c6aab26ac718e65ce8c370 https://frontaccounting.com/punbb/viewtopic.php?id=9940

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2022-08-15 Joe Hunt
+Show also Upcoming Purchase Invoices - in Dashboard. Fixed.
+M	includes/dashboard.inc
+
 2022-07-28 Joe Hunt
 php 8 error. class.mail.inc. line 149. #5 parameter cannot be null.
 M	reporting/includes/class.mail.inc
