Added comment to SECURE_ONLY constant. https://github.com/FrontAccountingERP/FA/commit/b14f304532b7d124e79ee2a03d60a0850c8a417d

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2022-08-29 Joe Hunt
+Added comment to SECURE_ONLY constant.
+M	includes/session.inc
+
 2022-08-15 Joe Hunt
 Show also Upcoming Purchase Invoices - in Dashboard. Fixed.
 M	includes/dashboard.inc
