--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2022-09-07 Joe Hunt
+Incorrect Journal Balance (sales invoice) when many decimals in tax and price.
+M	gl/includes/db/gl_db_trans.inc
+
 2022-09-06 Joe Hunt
 Sales group query error in mysql 8. groups is a reserved word. Fixed
 M	includes/ui/ui_lists.inc
