--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,9 @@
+2022-09-11 Joe Hunt
+Credit note could be posted without customer/supplier selected on search list enabled. Fixed.
+M	purchasing/supplier_credit.php
+M	purchasing/supplier_invoice.php
+M	sales/credit_note_entry.php
+
 2022-09-07 Joe Hunt
 Incorrect Journal Balance (sales invoice) when many decimals in tax and price.
 M	gl/includes/db/gl_db_trans.inc
