PHP 8 array bool error fixed. https://github.com/FrontAccountingERP/FA/commit/92f26ce5c76266a8b6e96a6b086aa919095e7316

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2022-09-11 Joe Hunt
+PHP 8 array bool error Fixed.
+M	sales/customer_payments.php
+
+2022-09-11 Joe Hunt
 Credit note could be posted without customer/supplier selected on search list enabled. Fixed.
 M	purchasing/supplier_credit.php
 M	purchasing/supplier_invoice.php
