--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2022-09-20 Joe Hunt
+PHP 8. Conversion from float to int loses precision in file: line 1391. Fixed.
+M	reporting/includes/class.graphic.inc
+
 2022-09-18 Joe Hunt
 Release 2.4.13
 M	version.php
