PHP 8 deprecated parameter in imagefilledpolygon. More float to int problems in reporting. Fixed. https://github.com/FrontAccountingERP/FA/commit/8a16c90606ab7f98b5238de10397a3da3bb2a6e9

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2022-09-22 Joe Hunt
+PHP 8 deprecated parameter in imagefilledpolygon. More float to int problems in reporting. Fixed.
+M	reporting/includes/class.graphic.inc
+
 2022-09-20 Joe Hunt
 PHP 8. Conversion from float to int loses precision in file: line 1391. Fixed.
 M	reporting/includes/class.graphic.inc
