--- a/core/lang/new_language_template/LC_MESSAGES/empty.po
+++ b/core/lang/new_language_template/LC_MESSAGES/empty.po
@@ -14,7 +14,7 @@ msgstr ""
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=ISO_8859-1\n"
+"Content-Type: text/plain; charset=ISO-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #: frontaccounting.php:72 frontaccounting.php:73
