Synched core empty.po without sorting with upstream https://github.com/FrontAccountingERP/FA/commit/bcdfafb67b41c26be1dd0dc01992bdd75bf5e16e https://frontaccounting.com/punbb/viewtopic.php?pid=41504#p41504

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2022-09-25 Joe Hunt
+Synched core empty.po without sorting with upstream
+M	lang/new_language_template/LC_MESSAGES/empty.po
+
+2022-09-25 Joe Hunt
 Corrected core empty.po translation template
 M	lang/new_language_template/LC_MESSAGES/empty.po
 
