--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2022-09-29 Joe Hunt
+Modifying Supplier Credit: reverted GL postings - fixed. Supplier Credit Note: invalid reference number selected for credit against invoice - fixed
+M	purchasing/includes/db/invoice_db.inc
+
 2022-09-25 Joe Hunt
 Synched core empty.po without sorting with upstream
 M	lang/new_language_template/LC_MESSAGES/empty.po
@@ -22,201 +26,4 @@ M	reporting/includes/class.graphic.inc
 Release 2.4.13
 M	version.php
 M	lang/new_language_template/LC_MESSAGES/empty.po
-
-2022-09-11 Joe Hunt
-PHP 8 array bool error Fixed.
-M	sales/customer_payments.php
-
-2022-09-11 Joe Hunt
-Credit note could be posted without customer/supplier selected on search list enabled. Fixed.
-M	purchasing/supplier_credit.php
-M	purchasing/supplier_invoice.php
-M	sales/credit_note_entry.php
-
-2022-09-07 Joe Hunt
-Incorrect Journal Balance (sales invoice) when many decimals in tax and price.
-M	gl/includes/db/gl_db_trans.inc
-
-2022-09-06 Joe Hunt
-Sales group query error in mysql 8. groups is a reserved word. Fixed
-M	includes/ui/ui_lists.inc
-M	sales/includes/db/sales_groups_db.inc
-
-2022-08-29 Joe Hunt
-Added comment to SECURE_ONLY constant.
-M	includes/session.inc
-
-2022-08-15 Joe Hunt
-Show also Upcoming Purchase Invoices - in Dashboard. Fixed.
-M	includes/dashboard.inc
-
-2022-07-28 Joe Hunt
-php 8 error. class.mail.inc. line 149. #5 parameter cannot be null.
-M	reporting/includes/class.mail.inc
-
-2022-07-22 Joe Hunt
-php 8. strpos(): Passing null to parameter #1 ($haystack) of type string is deprecated. Fixed.
-M	includes/date_functions.inc
-
-2022-07-22 Joe Hunt
-php 8. cannot generate recurring invoices after upgrade to 2.4.12. Fixed.
-M	reporting/includes/reporting.inc
-
-2022-07-17 Joe Hunt
-Invoice not converting from DN due to float bug in PHP. items_units_db.inc is already included, reruns
-M	sales/customer_delivery.php
-M	sales/customer_invoice.php
-
-2022-07-15 Joe Hunt
-get_stock_gl_code function called twice in the add_supp_invoice. Fixed.
-M	purchasing/includes/db/invoice_db.inc
-
-2022-07-13 Joe Hunt
-Release 2.4.12
-M	version.php
-M	CHANGELOG.txt
-
-2022-07-12 Janusz Dobrowolski
-Updated gettext template.
-M	lang/new_language_template/LC_MESSAGES/empty.po
-
-2022-07-10 Joe Hunt
-Removed delivery in a batch cannot be voided after the invoice is made. Fixed.
-M	admin/db/voiding_db.inc
-
-2022-07-10 Joe Hunt
-php 8.1 bug. Parameter to urlencode cannot be null. Fixed.
-M	reporting/includes/reporting.inc
-
-2022-06-28 Joe Hunt
-Bug 5599: Generating an EAN-8 Barcode throws an error "Trying to access array offset on value of type bool". Fixed.
-M	inventory/manage/items.php
-
-2022-06-23 Joe Hunt
-Feature 5623: link to new supplier invoice after supplier payment, option to have last supplier invoice be current supplier.
-M	purchasing/supplier_payment.php
-
-2022-06-23 Joe Hunt
-Bug 5571, 5572: Unable to void/edit transactions in php 8. Due to an error in audit_trail_db.inc. _('None') returns a positive value in php 8 and not a 0 value. Fixed.
-M	includes/db/audit_trail_db.inc
-
-2022-06-22 Janusz Dobrowolski
-Additional bugfixes for prepayment handling in sales reports (Customer Balances, Aged Customer Analysys, Customer Statements and Sales Invoice)
-M	includes/dashboard.inc
-M	reporting/rep102.php
-M	reporting/rep107.php
-M	sales/customer_invoice.php
-M	sales/includes/db/customers_db.inc
-M	sales/includes/db/sales_invoice_db.inc
-
-2022-06-03/06 Joe Hunt
-Several PHP 8/8.1 deprecated NULL fixes
-M	includes/JsHttpRequest.php
-M	includes/packages.inc
-M	includes/ui/ui_lists.inc
-M	reporting/includes/class.graphic.inc
-M	reporting/includes/pdf_report.inc
-M	reporting/rep101.php
-M	reporting/rep103.php
-M	reporting/rep201.php
-M	reporting/rep206.php
-M	reporting/rep302.php
-M	reporting/rep705.php
-
-2022-05-26 Joe Hunt
-Fixed Long product Description on Sales Quotation.
-M	reporting/rep111.php
-M	sales/includes/db/sales_order_db.inc
-
-2022-05-11 Janusz Dobrowolski
-Customer balances reports: further fixes and cleanups.
-M	reporting/rep101.php
-M	reporting/rep102.php
-M	reporting/rep115.php
-M	sales/includes/db/customers_db.inc
-
-2022-05-07 Joe Hunt
-Buttons missing on Chart of Accounts page (on some editions). Fixed.
-M	gl/manage/gl_accounts.php
-
-2022-05-07 Joe Hunt
-Adding Assets Classes fails. Fixed.
-M	fixed_assets/fixed_asset_classes.php
-
-2022-04-29/30 Janusz Dobrowolski
-Customer balances reports: fixed balance sums for prepayment invoices and re-run
-M	reporting/includes/doctext.inc
-M	reporting/rep101.php
-M	reporting/rep102.php
-M	reporting/rep108.php
-M	reporting/rep115.php
-M	sales/includes/db/customers_db.inc
-
-2022-04-29 Janusz Dobrowolski
-Invoice Prepaid Orders: Added new payments column for direct review of order invoicing status.
-M	sales/includes/db/sales_order_db.inc
-M	sales/inquiry/sales_orders_view.php
-
-2022-04-18 Joe Hunt
-Email invoice always says invoice 0 from company. Fixed.
-M	reporting/rep107.php
-
-2022-04-13 Joe Hunt
-Journal Entry - Cursor skips through dimension field. Fixed.
-M	gl/includes/ui/gl_journal_ui.inc
-
-2022-04-11 Joe Hunt
-Coding bug in inventory_db.inc. Fixed. 
-M	inventory/includes/inventory_db.inc
-
-2022-03-23 Joe Hunt
-Bank account transfers don't have GL dimensions. Fixed.
-M	gl/bank_transfer.php
-M	gl/includes/db/gl_db_banking.inc
-
-2022-03-16 Joe Hunt
-Dashboard issues fixed with rerun
-M	includes/dashboard.inc
-M	purchasing/inquiry/supplier_inquiry.php (whitespace only)
-
-2022-03-13 Joe Hunt
-Typo fixed in Translatable source string ot => to
-M	lang/new_language_template/LC_MESSAGES/empty.po
-M	purchasing/allocations/supplier_allocate.php
-
-2022-02-05 Joe Hunt
-Typo fixed in Translatable source string Purchable => Purchasable
-M	includes/dashboard.inc
-M	lang/new_language_template/LC_MESSAGES/empty.po
-
-2022-01-24 Janusz Dobrowolski
-Add and Manage Customers, Suppliers: contact persons where not removed when deleting customer/supplier. Fixed.
-M	includes/db/crm_contacts_db.inc
-M	purchasing/includes/db/suppliers_db.inc
-
-2022-01-24 Joe Hunt
-Renamed function usage to 'del_image' from missing 'delete_image' when deleting image as used in codebase.
-M	inventory/manage/items.php
-
-2022-01-23 Janusz Dobrowolski
-Abstraction to define in session.inc for https
-M	includes/session.inc
-
-2022-01-03 Joe Hunt
-Graphics engine bugfixes
-M	reporting/includes/class.graphic.inc
-
-2021-12-14 Janusz Dobrowolski
-Fixed parameter lists in gl_all_accounts_list_row and calls to subledger_list_cells
-M	gl/includes/ui/gl_journal_ui.inc
-M	includes/ui/ui_lists.inc
-
-2021-12-13 Joe Hunt
-Bug 5544: Notes from template are not used in recurring invoices. Fixed. 
-M	sales/create_recurrent_invoices.php
-
-2021-12-04 Joe Hunt
-Release 2.4.11
-M	version.php
-M	CHANGELOG.txt
 
