Feature. Add Supplier Invoice Menu after Supplier Payment. Added. https://github.com/FrontAccountingERP/FA/commit/716ddd8b68b285b432e47626939165d9f6c48f90 https://frontaccounting.com/punbb/viewtopic.php?id=10054

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2022-10-25 Joe Hunt
+Feature. Add Supplier Invoice Menu after Supplier Payment. Added.
+M	purchasing/supplier_payment.php
+
 2022-10-20 Joe Hunt
 Typo on line 265. Fixed.
 M	sales/customer_payments.php
