Bug. Add instruction if Login from unsecure server. Fixed. https://github.com/FrontAccountingERP/FA/commit/d6e8d36bec2dfb4c1c528afb5fb1600ca486585e

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2022-10-25 Joe Hunt
+Bug. Add instruction if Login from unsecure server. Fixed.
+M	access/login.php
+
+2022-10-25 Joe Hunt
 Feature. Add Supplier Invoice Menu after Supplier Payment. Added.
 M	purchasing/supplier_payment.php
 
