Dimensions bugs fixed in several commits https://github.com/FrontAccountingERP/FA/commit/0993b7ce29eae14e201071b535cb28e0668cd06e https://github.com/FrontAccountingERP/FA/commit/57f7d4930f7c579c85272d88eddd9a5bede8ef19 https://github.com/FrontAccountingERP/FA/commit/71af8385cd546d7c5c009be1cc993029a52b8f8f

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,10 @@
+2022-11-01 Joe Hunt
+Dimensions bugs fixed in several commits
+M	inventory/includes/db/items_adjust_db.inc
+M	inventory/includes/db/items_trans_db.inc
+M	sales/includes/db/sales_credit_db.inc
+M	sales/includes/db/sales_delivery_db.inc
+
 2022-10-26 Joe Hunt
 Release 2.4.14
 M	lang/new_language_template/LC_MESSAGES/empty.po
