Unable to void customer payment on invoice with same number credited and rerun. Fixed. https://github.com/FrontAccountingERP/FA/commit/cd41af78f0d0f726d43b0f77303bed2a7939bb27 https://frontaccounting.com/punbb/viewtopic.php?id=10038

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2022-11-02 Joe Hunt
+Unable to void customer payment on invoice with same number credited and rerun. Fixed.
+M	admin/db/voiding_db.inc
+
 2022-11-01 Joe Hunt
 Bug 5660: php8. Unable to create customer credit note. Fixed.
 M	sales/includes/ui/sales_credit_ui.inc
