--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,8 @@
+2022-11-11/12/17 Joe Hunt
+Not translated string in rep108 fixed with reruns
+M	lang/new_language_template/LC_MESSAGES/empty.po
+M	reporting/rep108.php
+
 2022-11-03 Joe Hunt
 Cost Update - Second parameter in memo was not showing decimals. Fixed.
 Secon Rerun of voiding Customer Payment. Of course test for type first.
