Bug in purchasing invoice_alloc_balance. Fixed. https://github.com/FrontAccountingERP/FA/commit/7b4a41683cfde121c70adbb44ddcc30efa5c2f95 https://frontaccounting.com/punbb/viewtopic.php?id=10088

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2022-11-20 Joe Hunt
+Bug in purchasing invoice_alloc_balance. Fixed.
+M	purchasing/includes/db/invoice_db.inc
+
 2022-11-11/12/17 Joe Hunt
 Not translated string in rep108 fixed with reruns
 M	lang/new_language_template/LC_MESSAGES/empty.po
