Workorders booking costs on balance now set dimension on the item. Fixed. https://github.com/FrontAccountingERP/FA/commit/aec1717f263bf767543afa6bd0cb960ce53e0a0d https://frontaccounting.com/punbb/viewtopic.php?id=10113

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2022-12-05 Joe Hunt
+Workorders bookings on balance now set dimension on the item. Fixed.
+M	manufacturing/includes/db/work_order_costing_db.inc
+
 2022-11-20 Joe Hunt
 Bug in purchasing invoice_alloc_balance. Fixed.
 M	purchasing/includes/db/invoice_db.inc
