--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,11 @@
+2022-12-08 Joe Hunt
+Customer/Supplier Transactions, Allocations new selection type, Journal Entries.
+M	includes/ui/ui_lists.inc
+M	purchasing/includes/db/supp_trans_db.inc
+M	purchasing/includes/db/suppalloc_db.inc
+M	sales/includes/db/cust_trans_db.inc
+M	sales/includes/db/custalloc_db.inc
+
 2022-12-05 Joe Hunt
 Workorders bookings on balance now set dimension on the item. Fixed.
 M	manufacturing/includes/db/work_order_costing_db.inc
