Added 'Journal Entries' to empty.po file. https://github.com/FrontAccountingERP/FA/commit/a9f8bc40287ef12f16ad863d4acb1af3d18643b6 https://frontaccounting.com/punbb/viewtopic.php?pid=41813#p41813

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2022-12-10 Joe Hunt
+Added 'Journal Entries' to empty.po file.
+M	lang/new_language_template/LC_MESSAGES/empty.po
+
 2022-12-08 Joe Hunt
 Customer/Supplier Transactions, Allocations new selection type, Journal Entries.
 M	includes/ui/ui_lists.inc
