Inventory valuation report. 301 unit decimal -1 issue. Fixed. https://github.com/FrontAccountingERP/FA/commit/d4c7f6c430d861a4c27f7734e285852e248a5a9a https://frontaccounting.com/punbb/viewtopic.php?id=10131

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2022-12-26 Joe Hunt
+Inventory valuation report. 301 unit decimal -1 issue. Fixed.
+M	reporting/rep301.php
+
 2022-12-10 Joe Hunt
 Added 'Journal Entries' to empty.po file.
 M	lang/new_language_template/LC_MESSAGES/empty.po
