Added 'company_logo_on_views' in sys_prefs in the default sql charts. https://github.com/FrontAccountingERP/FA/commit/394479072885eec15203a1213511cd016d416f6b https://frontaccounting.com/punbb/viewtopic.php?pid=41917#p41917

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,8 @@
+2023-01-03 Joe Hunt
+Added 'company_logo_on_views' in sys_prefs in the default sql charts.
+M	sql/en_US-demo.sql
+M	sql/en_US-new.sql
+
 2022-12-26 Joe Hunt
 Added company switch for placing company logo on certain views.
 M	admin/company_preferences.php
