--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2023-01-05 Joe Hunt
+Credit note bug in suppliers. Result in errors. Fixed.
+M	purchasing/includes/db/invoice_db.inc
+
 2023-01-03 Joe Hunt
 Added 'company_logo_on_views' in sys_prefs in the default sql charts.
 M	sql/en_US-demo.sql
