Audit trail is showing double entries for Payment and Deposit. Fixed. https://github.com/FrontAccountingERP/FA/commit/a2bd6e80fbe669ca10c3936bb5373994fe8e4918 https://frontaccounting.com/punbb/viewtopic.php?id=10155

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,8 @@
+2023-01-16 Joe Hunt
+Audit trail is showing double entries for Payment and Deposit. Fixed.
+M	purchasing/includes/db/supp_trans_db.inc
+M	sales/includes/db/cust_trans_db.inc
+
 2023-01-05 Joe Hunt
 Credit note bug in suppliers. Result in errors. Fixed.
 M	purchasing/includes/db/invoice_db.inc
