--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2023-01-17 Joe Hunt
+GL Account in Company Defaults missing for test. Fixed
+M	gl/includes/db/gl_db_accounts.inc
+
 2023-01-16 Joe Hunt
 Audit trail is showing double entries for Payment and Deposit. Fixed.
 M	purchasing/includes/db/supp_trans_db.inc
