Cannot add received items to invoice if there are empty prev. items. Fixed. https://github.com/FrontAccountingERP/FA/commit/a41fc3d75af89ab616e17ec42a116fcf201e5040 https://frontaccounting.com/punbb/viewtopic.php?id=10158

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2023-01-22 Joe Hunt
+Cannot add received items to invoice if there are empty prev. items. Fixed.
+M	purchasing/supplier_invoice.php
+
 2023-01-17 Joe Hunt
 GL Account in Company Defaults missing for test. Fixed
 M	gl/includes/db/gl_db_accounts.inc
