Implemented automatic greater fonts when higher screen resolutions. https://github.com/FrontAccountingERP/FA/commit/6fcf044a203f1c7f60b448a3d0b10e6c9d2dd470 https://frontaccounting.com/punbb/viewtopic.php?pid=41974#p41974

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,9 @@
+2023-01-28 Joe Hunt
+Implemented automatic greater fonts when higher screen resolutions.
+M	themes/canvas/default.css
+M	themes/default/default.css
+M	themes/dropdown/default.css
+
 2023-01-26 Janusz Dobrowolski
 Extensions: fixed gettext support for modules.
 M	includes/hooks.inc
