Added Customer / Supplier Payment Attachments after operation. https://github.com/FrontAccountingERP/FA/commit/a0e36794a39ed024175b216413ee80cbeced2946

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,8 @@
+2023-02-05 Joe Hunt
+Added Customer / Supplier Payment Attachments after operation.
+M	purchasing/supplier_payment.php
+M	sales/customer_payments.php
+
 2023-01-28 Joe Hunt
 Implemented automatic greater fonts when higher screen resolutions.
 M	themes/canvas/default.css
