--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2023-02-05 Joe Hunt
+Fixed a bug in presenting a fixed asset attachment (should be the Supplier Invoice).
+M	fixed_assets/inquiry/stock_inquiry.php
+
+2023-02-05 Joe Hunt
 Added Customer / Supplier Payment Attachments after operation.
 M	purchasing/supplier_payment.php
 M	sales/customer_payments.php
