Bug. php 8. nl2br with null parameter in view_sales_order. Fixed. https://github.com/FrontAccountingERP/FA/commit/181a41d711bef3cec7ca559e35e9e12d1d4f4515

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2023-02-07 Joe Hunt
+Bug. php 8. nl2br with null parameter in view_sales_order. Fixed.
+M	sales/view/view_sales_order.php
+
 2023-02-06 Joe Hunt
 Moved years in default COAs one year forward.
 M	sql/en_US-demo.sql
