Cleanup in attachments_db.inc and rerun https://github.com/FrontAccountingERP/FA/commit/be38c92bf817200dd5d6f70153dde2826bae6238 https://github.com/FrontAccountingERP/FA/commit/523b8c69689f9ceb978b422b3e65a7eb9c089b6f

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2023-02-07 Joe Hunt
+Cleanup in attachments_db.inc and rerun
+M	admin/db/attachments_db.inc
+
+2023-02-07 Joe Hunt
 Bug. php 8. nl2br with null parameter in view_sales_order. Fixed.
 M	sales/view/view_sales_order.php
 
