--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2023-02-24 Joe Hunt
+PHP 8.1 onwards db_set_charset second parameter null => utf8.
+M	admin/db/maintenance_db.inc
+
 2023-02-07 Joe Hunt
 Cleanup in attachments_db.inc and rerun
 M	admin/db/attachments_db.inc
