Bug. add_domain function generates a big list of not found domain file errors. Fixed. https://github.com/FrontAccountingERP/FA/commit/3218c355d9455506febbd3a8a7d9bd61fc9a0a34 https://frontaccounting.com/punbb/viewtopic.php?pid=42120#p42120

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2023-02-24 Joe Hunt
+Bug. add_domain function generates a big list of not found domain file errors. Fixed.
+M	includes/lang/gettext.inc
+
+2023-02-24 Joe Hunt
 Release 2.4.15
 M	lang/new_language_template/LC_MESSAGES/empty.po
 M	version.php
