--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,8 @@
+2023-03-08 Joe Hunt
+Bug 5678: Customer/Supplier Transactions Ageing Inquiry fixed.
+M	purchasing/inquiry/supplier_inquiry.php
+M	sales/inquiry/customer_inquiry.php
+
 2023-03-03 Joe Hunt
 Bug in Supplier Payment db calls void_cust_allocations => void_supp_allocations fixed.
 M	purchasing/includes/db/supp_payment_db.inc
