--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2023-03-18 Janusz Dobrowolski
+Bug 5679: Supplier Invoices: error when second invoice to GRN was entered, fixed.
+M	purchasing/includes/db/invoice_db.inc
+
 2023-03-08 Joe Hunt
 Bug 5678: Customer/Supplier Transactions Ageing Inquiry fixed.
 M	purchasing/inquiry/supplier_inquiry.php
