Attach documents: error message on some php8 versions fixed and rerun https://sourceforge.net/p/frontaccounting/git/ci/5c2139b6e3be2ddccde4d49dfd937a24656c6e31/tree/includes/ui/simple_crud_class.inc?diff=b2b7e20b9372fc8fc002d8cf25f1d3c72917ea4f

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2023-03-25 Joe Hunt
+Attach documents: error message on some php8 versions fixed and rerun
+M	includes/ui/simple_crud_class.inc
+
 2023-03-18 Janusz Dobrowolski
 Bug 5679: Supplier Invoices: error when second invoice to GRN was entered, fixed.
 M	purchasing/includes/db/invoice_db.inc
