Bug 5683:Annoyance. Allow attachments from most needed post-creation option screens. https://sourceforge.net/p/frontaccounting/git/ci/b71d9175e95d1a4520674f8adaa0cc46d1659447/tree/purchasing/po_entry_items.php?diff=5c2139b6e3be2ddccde4d49dfd937a24656c6e31 https://sourceforge.net/p/frontaccounting/git/ci/b71d9175e95d1a4520674f8adaa0cc46d1659447/tree/purchasing/po_receive_items.php?diff=5c2139b6e3be2ddccde4d49dfd937a24656c6e31 https://sourceforge.net/p/frontaccounting/git/ci/b71d9175e95d1a4520674f8adaa0cc46d1659447/tree/sales/customer_delivery.php?diff=5c2139b6e3be2ddccde4d49dfd937a24656c6e31 https://sourceforge.net/p/frontaccounting/git/ci/b71d9175e95d1a4520674f8adaa0cc46d1659447/tree/sales/sales_order_entry.php?diff=5c2139b6e3be2ddccde4d49dfd937a24656c6e31

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,10 @@
+2023-03-29 Joe Hunt
+Bug 5683:Annoyance. Allow attachments from most needed post-creation option screens.
+M	purchasing/po_entry_items.php
+M	purchasing/po_receive_items.php
+M	sales/customer_delivery.php
+M	sales/sales_order_entry.php
+
 2023-03-25 Joe Hunt
 Attach documents: error message on some php8 versions fixed and rerun
 M	includes/ui/simple_crud_class.inc
