Bug 5685: Bank Statement w/Reconcile report includes gl_trans values that are "0.00". Fixed. https://sourceforge.net/p/frontaccounting/git/ci/8320f5fcac33bcde50d2adcd724e0d19011fb4f9/tree/reporting/rep601.php?diff=97122b2b71989c3d2ec2fefd1f4ded105dbbf225 https://sourceforge.net/p/frontaccounting/git/ci/8320f5fcac33bcde50d2adcd724e0d19011fb4f9/tree/reporting/rep602.php?diff=97122b2b71989c3d2ec2fefd1f4ded105dbbf225

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,8 @@
+2023-04-04 Joe Hunt
+Bug 5685: Bank Statement w/Reconcile report includes gl_trans values that are "0.00". Fixed.
+M	reporting/rep601.php
+M	reporting/rep602.php
+
 2023-04-01 Joe Hunt
 Bug 5687: Unable to dispatch SO for service items with u/m decimal places set as "user defined" when SO item qty is less than 5. Fixed.
 M	sales/customer_delivery.php
