--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2023-04-14 Joe Hunt
+Bug 5692: Translatable Strings in locations.php were not translatable. Fixed.
+M	inventory/manage/locations.php
+
 2023-04-04 Joe Hunt
 Bug 5685: Bank Statement w/Reconcile report includes gl_trans values that are "0.00". Fixed.
 M	reporting/rep601.php
