New translatable strings in locations.php. https://sourceforge.net/p/frontaccounting/git/ci/15d91ff453f9762cf1851c89801d465feb5b216c/tree/lang/new_language_template/LC_MESSAGES/empty.po?diff=ba4f426ecb3f2383d42edaea148270ab1a384ba1

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2023-04-14 Joe Hunt
+New translatable strings in locations.php.
+M	lang/new_language_template/LC_MESSAGES/empty.po
+
+2023-04-14 Joe Hunt
 Bug 5692: Translatable Strings in locations.php were not translatable. Fixed.
 M	inventory/manage/locations.php
 
