get_unit_dec => get_qty_dec for eliminating return -1. https://sourceforge.net/p/frontaccounting/git/ci/0edc4dc9944f49ac9526fa9674f4cfe7bbff370c/tree/sales/customer_delivery.php?diff=15d91ff453f9762cf1851c89801d465feb5b216c https://sourceforge.net/p/frontaccounting/git/ci/0edc4dc9944f49ac9526fa9674f4cfe7bbff370c/tree/sales/customer_invoice.php?diff=15d91ff453f9762cf1851c89801d465feb5b216c

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,8 @@
+2023-04-15 Joe Hunt
+get_unit_dec => get_qty_dec for eliminating return -1.
+M	sales/customer_delivery.php
+M	sales/customer_invoice.php
+
 2023-04-14 Joe Hunt
 New translatable strings in locations.php.
 M	lang/new_language_template/LC_MESSAGES/empty.po
