Average material cost test for qoh > 0 and qoh + qty > 0 has changed to 0.0000000001 to avoid strange php results for very small values. https://sourceforge.net/p/frontaccounting/git/ci/9a4dbbda763486152d2e98485a7a2a699426141d/tree/purchasing/includes/db/grn_db.inc?diff=0edc4dc9944f49ac9526fa9674f4cfe7bbff370c

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2023-04-16 Joe Hunt
+Average material cost test for qoh > 0 and qoh + qty > 0 has changed to 0.0000000001 to avoid strange php results for very small values.
+M	purchasing/includes/db/grn_db.inc
+
 2023-04-15 Joe Hunt
 get_unit_dec => get_qty_dec for eliminating return -1.
 M	sales/customer_delivery.php
