Supplier description is overwritten when receiving items. Fixed. https://sourceforge.net/p/frontaccounting/git/ci/9116377b75b35aed960ce77a4dc033a0c72bec97/tree/purchasing/includes/purchasing_db.inc?diff=9a4dbbda763486152d2e98485a7a2a699426141d

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2023-04-19 Joe Hunt
+Supplier description is overwritten when receiving items. Fixed.
+M	purchasing/includes/purchasing_db.inc
+
 2023-04-16 Joe Hunt
 Average material cost test for qoh > 0 and qoh + qty > 0 has changed to 0.0000000001 to avoid strange php results for very small values.
 M	purchasing/includes/db/grn_db.inc
