Bug 5695: Purchase Order Item Description should be saved on the PO line description directly. Fixed. https://sourceforge.net/p/frontaccounting/git/ci/91d3ebdef0c693e44d4e313e44e662c54f2d734d/tree/purchasing/includes/db/po_db.inc?diff=9116377b75b35aed960ce77a4dc033a0c72bec97 https://sourceforge.net/p/frontaccounting/git/ci/91d3ebdef0c693e44d4e313e44e662c54f2d734d/tree/purchasing/includes/po_class.inc?diff=9116377b75b35aed960ce77a4dc033a0c72bec97 https://sourceforge.net/p/frontaccounting/git/ci/91d3ebdef0c693e44d4e313e44e662c54f2d734d/tree/purchasing/includes/purchasing_db.inc?diff=9116377b75b35aed960ce77a4dc033a0c72bec97 https://sourceforge.net/p/frontaccounting/git/ci/91d3ebdef0c693e44d4e313e44e662c54f2d734d/tree/purchasing/view/view_po.php?diff=9116377b75b35aed960ce77a4dc033a0c72bec97 https://sourceforge.net/p/frontaccounting/git/ci/91d3ebdef0c693e44d4e313e44e662c54f2d734d/tree/reporting/rep209.php?diff=9116377b75b35aed960ce77a4dc033a0c72bec97

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,11 @@
+2023-04-27 Joe Hunt
+Bug 5695: Purchase Order Item Description should be saved on the PO line description directly. Fixed.
+M	purchasing/includes/db/po_db.inc
+M	purchasing/includes/po_class.inc
+M	purchasing/includes/purchasing_db.inc
+M	purchasing/view/view_po.php
+M	reporting/rep209.php
+
 2023-04-19 Joe Hunt
 Supplier description is overwritten when receiving items. Fixed.
 M	purchasing/includes/purchasing_db.inc
