Allow fractional entry of PO Line Price upto 6 decimals. https://sourceforge.net/p/frontaccounting/git/ci/2a5c4dfc9b28b81fc858eddc7cfb42ad9b4bfdba/tree/inventory/purchasing_data.php?diff=91d3ebdef0c693e44d4e313e44e662c54f2d734d https://sourceforge.net/p/frontaccounting/git/ci/2a5c4dfc9b28b81fc858eddc7cfb42ad9b4bfdba/tree/purchasing/includes/ui/po_ui.inc?diff=91d3ebdef0c693e44d4e313e44e662c54f2d734d

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,9 @@
 2023-04-27 Joe Hunt
+Allow fractional entry of PO Line Price upto 6 decimals.
+M	inventory/purchasing_data.php
+M	purchasing/includes/ui/po_ui.inc
+
+2023-04-27 Joe Hunt
 Bug 5695: Purchase Order Item Description should be saved on the PO line description directly. Fixed.
 M	purchasing/includes/db/po_db.inc
 M	purchasing/includes/po_class.inc
