Bug 5698: Rep302 Spelling Mistake. Fixed. https://sourceforge.net/p/frontaccounting/git/ci/e8152d62c89b6487b11c6a3879f0346dbd66dd45/tree/lang/new_language_template/LC_MESSAGES/empty.po?diff=2a5c4dfc9b28b81fc858eddc7cfb42ad9b4bfdba https://sourceforge.net/p/frontaccounting/git/ci/e8152d62c89b6487b11c6a3879f0346dbd66dd45/tree/reporting/rep302.php?diff=2a5c4dfc9b28b81fc858eddc7cfb42ad9b4bfdba https://frontaccounting.com/punbb/viewtopic.php?id=10276

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,9 @@
 2023-04-27 Joe Hunt
+Bug 5698: Rep302 Spelling Mistake. Fixed.
+M	lang/new_language_template/LC_MESSAGES/empty.po
+M	reporting/rep302.php
+
+2023-04-27 Joe Hunt
 Allow fractional entry of PO Line Price upto 6 decimals.
 M	inventory/purchasing_data.php
 M	purchasing/includes/ui/po_ui.inc
