Bug 5697: In Supplier Transaction Inquiry, Aging balances are Incorrect. Rerun and Fixed. https://sourceforge.net/p/frontaccounting/git/ci/36823b0fc61d0b2bcffb5d6fbdcc8b1714e8c9c9/tree/purchasing/inquiry/supplier_inquiry.php?diff=9242b29b0b78487a0c5b5c9a17a7caa80aeec296 https://sourceforge.net/p/frontaccounting/git/ci/490690013b7bb161ee2295b89cb18e1a88cae2af/tree/purchasing/includes/db/suppliers_db.inc?diff=36823b0fc61d0b2bcffb5d6fbdcc8b1714e8c9c9 https://sourceforge.net/p/frontaccounting/git/ci/490690013b7bb161ee2295b89cb18e1a88cae2af/tree/reporting/rep202.php?diff=36823b0fc61d0b2bcffb5d6fbdcc8b1714e8c9c9

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,9 @@
 2023-04-28 Joe Hunt
+Bug 5697: In Supplier Transaction Inquiry, Aging balances are Incorrect. Rerun and Fixed.
+M	purchasing/inquiry/supplier_inquiry.php
+M	reporting/rep202.php
+
+2023-04-28 Joe Hunt
 Bug 5682: Voided Invoices and PO Deliveries showing up in inquiries. Fixed.
 M	purchasing/inquiry/supplier_inquiry.php
 M	purchasing/view/view_po.php
