Bug 5694: Request Various Attachment Changes. Fixed the most. https://sourceforge.net/p/frontaccounting/git/ci/fe2e057d97e8a8bc2429025b861f9229c5b9fe05/tree/includes/ui/attachment.inc?diff=490690013b7bb161ee2295b89cb18e1a88cae2af

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2023-04-28 Joe Hunt
+Bug 5694: Request Various Attachment Changes. Fixed the most.
+M	includes/ui/attachment.inc
+
+2023-04-28 Joe Hunt
 Bug 5697: In Supplier Transaction Inquiry, Aging balances are Incorrect. Rerun and Fixed.
 M	purchasing/inquiry/supplier_inquiry.php
 M	reporting/rep202.php
