Bug 5682: Voided Invoices and PO Deliveries showing up in inquiries. Fixed. https://sourceforge.net/p/frontaccounting/git/ci/9242b29b0b78487a0c5b5c9a17a7caa80aeec296/tree/purchasing/inquiry/supplier_inquiry.php?diff=e8152d62c89b6487b11c6a3879f0346dbd66dd45 https://sourceforge.net/p/frontaccounting/git/ci/9242b29b0b78487a0c5b5c9a17a7caa80aeec296/tree/purchasing/view/view_po.php?diff=e8152d62c89b6487b11c6a3879f0346dbd66dd45

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,8 @@
+2023-04-28 Joe Hunt
+Bug 5682: Voided Invoices and PO Deliveries showing up in inquiries. Fixed.
+M	purchasing/inquiry/supplier_inquiry.php
+M	purchasing/view/view_po.php
+
 2023-04-27 Joe Hunt
 Bug 5698: Rep302 Spelling Mistake. Fixed.
 M	lang/new_language_template/LC_MESSAGES/empty.po
