--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,8 @@
+2023-05-03 Joe Hunt
+Release 2.4.16
+M	lang/new_language_template/LC_MESSAGES/empty.po
+M	version.php
+
 2023-04-30 Joe Hunt
 New Translations file, item and fixed assets attachments and reruns
 M	admin/attachments.php
