--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2023-08-01/06 Joe Hunt
+Added Payment Link (Payment Service) for XUMM. A Dutch free Payment Service and re-run
+M	includes/ui/ui_view.inc
+
 2023-05-03 / 2023-07-03 Joe Hunt
 Mark Inactive Customers and Suppliers in Reports (when no Filter). Bug 5709: Calculation fixed.
 M	reporting/rep101.php
